# sdl-metal-cpp-example

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  triangle.metal  triangle_types.h
cmake/modules/: metal.cmake
metal-cpp/: CMakeLists.txt  MetalCPP.cpp
metal-cpp/Metal/: MTLRenderCommandEncoder.hpp  shared_ptr.hpp
metal-cpp/QuartzCore/: CAMetalLayer.hpp  CAPrivate.hpp  QuartzCore.hpp
